--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   text-align: center;
 }
 
-.Header, .Footer {
+.Footer {
   background-color:#965fa3;
   height: 10em;
   padding: 1em;
@@ -17,6 +17,8 @@
 h1 {
   font-family: 'Lobster', cursive;
   font-size: 5em;
+  color: white;
+  padding: .5em;
 }
 
 .Main {
@@ -28,3 +30,16 @@ h1 {
   row-gap: 15px;
   justify-content: center;
 }
+
+h1 {
+  width:100%;
+  height: 2em;
+}
+#pink-header {
+  background-color: #965fa3;
+}
+
+#rainbow-header {
+  background: linear-gradient(90deg, rgba(255,0,0,1) 0%, rgba(255,154,0,1) 10%, rgba(208,222,33,1) 20%, rgba(79,220,74,1) 30%, rgba(63,218,216,1) 40%, rgba(47,201,226,1) 50%, rgba(28,127,238,1) 60%, rgba(95,21,242,1) 70%, rgba(186,12,248,1) 80%, rgba(251,7,217,1) 90%, rgba(255,0,0,1) 100%);
+}
+
