--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,38 @@ h1 {
   color:#5541c7;
 }
 
+.cardImg:hover {
+  cursor:url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='40' height='48' viewport='0 0 100 100' style='fill:black;font-size:24px;'><text y='50%'>🦄</text></svg>")
+  16 0, auto;
+}
+/* cursor from dev.to */
+
+.cardImg:active{
+  border:groove;
+}
+
+.beastModal{
+  text-align: center;
+}
+
+.beastModalTitle{
+  text-align: center;
+}
+
+.beastModalImg {
+  width: 450px;
+  padding-top: 3em;
+}
+
+.button {
+  background-color: #fbfbd7;
+  border: none;
+}
+
+.button:hover {
+  background-color: #c673c2;
+  cursor: zoom-in;
+}
 
 .Footer {
   background-color:#965fa3;
