--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,7 @@ h1 {
 
 .Main {
   margin: 4em;
+  margin-top: 2em;
 }
 
 #beast {
@@ -62,6 +63,10 @@ h1 {
 .button:hover {
   background-color: #c673c2;
   cursor: zoom-in;
+}
+
+.mb-3 {
+  margin-bottom: 4em;
 }
 
 .Footer {
